[gd_scene load_steps=30 format=2]

[ext_resource path="res://Scripts/Second_floor/second_floor.gd" type="Script" id=1]
[ext_resource path="res://Images/Tavern/Taverna_02.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Global/bottles.gd" type="Script" id=3]
[ext_resource path="res://Images/Assets_tavern/cacosvideo-01.png" type="Texture" id=4]
[ext_resource path="res://Images/Assets_tavern/barril-01.png" type="Texture" id=5]
[ext_resource path="res://Images/Assets_tavern/mesa-01.png" type="Texture" id=6]
[ext_resource path="res://Scripts/Enemy_arrow.gd" type="Script" id=7]
[ext_resource path="res://Images/Enemy_arrow/Idle/bandit_arrow_idle-01.png" type="Texture" id=8]
[ext_resource path="res://Images/Enemy_arrow/Idle/bandit_arrow_idle-02.png" type="Texture" id=9]
[ext_resource path="res://Images/Enemy_arrow/Attack/bandit_arrow_attack-01.png" type="Texture" id=10]
[ext_resource path="res://Images/Enemy_arrow/Attack/bandit_arrow_attack-02.png" type="Texture" id=11]
[ext_resource path="res://Images/Enemy_arrow/Attack/bandit_arrow_attack-03.png" type="Texture" id=12]
[ext_resource path="res://Sound/Enemies/Arrow/arrow_shoot.wav" type="AudioStream" id=13]
[ext_resource path="res://Scripts/Sheet_0.gd" type="Script" id=14]
[ext_resource path="res://Images/pauta.png" type="Texture" id=15]
[ext_resource path="res://Images/Assets_tavern/degrau_disable.png" type="Texture" id=16]
[ext_resource path="res://Images/Assets_tavern/degrau_enable.png" type="Texture" id=17]
[ext_resource path="res://Sound/Challenges/0_Rhythm/note_0.wav" type="AudioStream" id=18]
[ext_resource path="res://Sound/Challenges/0_Rhythm/note_1.wav" type="AudioStream" id=19]
[ext_resource path="res://Sound/Challenges/0_Rhythm/note_2.wav" type="AudioStream" id=20]
[ext_resource path="res://Sound/Challenges/0_Rhythm/note_3.wav" type="AudioStream" id=21]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 123.533, 9.85602 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 2337.2, 9.67148 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 294.871 )

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 203.449, 33.2238 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 168.219, 10 )

[sub_resource type="SpriteFrames" id=6]

animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 75.3303, 96.9585 )

[sub_resource type="SpriteFrames" id=8]

animations = [ {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "off",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "on",
"speed": 5.0
} ]

[node name="second_floor" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="background" type="Sprite" parent="." index="0"]

position = Vector2( 0, 620 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="floor_and_walls" type="StaticBody2D" parent="." index="1"]

editor/display_folded = true
position = Vector2( 0, 620 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]

[node name="door_collision" type="CollisionShape2D" parent="floor_and_walls" index="0"]

position = Vector2( 2045.57, 308.027 )
scale = Vector2( 1.06782, 1 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="bottom_collision" type="CollisionShape2D" parent="floor_and_walls" index="1"]

position = Vector2( 1104.3, 607.762 )
scale = Vector2( 0.470872, 1.21338 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="top_collision" type="CollisionShape2D" parent="floor_and_walls" index="2"]

position = Vector2( 1102.09, 12.1594 )
scale = Vector2( 0.470872, 1.21338 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="left_collision" type="CollisionShape2D" parent="floor_and_walls" index="3"]

position = Vector2( 10.4542, 318.853 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="right_collision" type="CollisionShape2D" parent="floor_and_walls" index="4"]

position = Vector2( 2186.67, 315.368 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="door_two" type="Position2D" parent="." index="2"]

position = Vector2( 2050.51, 841.828 )
scale = Vector2( 1.5054, 1.04196 )
_sections_unfolded = [ "Transform" ]

[node name="bottles" type="StaticBody2D" parent="." index="3"]

editor/display_folded = true
position = Vector2( 1610.9, 1182.42 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="sprite_0" type="Sprite" parent="bottles" index="0"]

rotation = 3.14159
scale = Vector2( 0.542253, -0.542253 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="sprite_1" type="Sprite" parent="bottles" index="1"]

position = Vector2( 204.598, 0 )
rotation = 3.14159
scale = Vector2( 0.542253, -0.542253 )
texture = ExtResource( 4 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionShape2D" parent="bottles" index="2"]

position = Vector2( 102.299, -1.9864 )
shape = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="barrils" type="StaticBody2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 1901.75, 1152.6 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]

[node name="sprite_0" type="Sprite" parent="barrils" index="0"]

position = Vector2( 134.459, -123.986 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="sprite_1" type="Sprite" parent="barrils" index="1"]

position = Vector2( 205.728, 1.46399 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="sprite_2" type="Sprite" parent="barrils" index="2"]

position = Vector2( 79.8555, 0 )
scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionPolygon2D" parent="barrils" index="3"]

build_mode = 0
polygon = PoolVector2Array( 22.3934, 53.0994, 22.3934, -50.7462, 33.014, -50.7462, 33.014, -63.1368, 77.2664, -63.1368, 77.2664, -174.653, 88.4771, -174.063, 88.4771, -186.453, 181.112, -187.043, 181.112, -175.833, 192.323, -175.243, 192.323, -73.1674, 179.932, -72.5774, 179.932, -61.9568, 250.146, -61.9568, 251.326, -50.1561, 264.306, -50.1561, 264.306, 53.0994, 251.916, 52.5093, 251.916, 63.7198, 32.4241, 63.7198, 32.4241, 52.5093 )

[node name="table" type="StaticBody2D" parent="." index="5"]

editor/display_folded = true
position = Vector2( 696.052, 1146.71 )
scale = Vector2( 0.810608, 0.810608 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision", "Transform" ]

[node name="sprite" type="Sprite" parent="table" index="0"]

scale = Vector2( 0.621435, 0.621435 )
texture = ExtResource( 6 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionShape2D" parent="table" index="1"]

position = Vector2( 0.000244141, -74.0046 )
shape = SubResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="barril" type="StaticBody2D" parent="." index="6"]

editor/display_folded = true
position = Vector2( 1121.27, 1148.69 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]

[node name="sprite" type="Sprite" parent="barril" index="0"]

scale = Vector2( 0.55, 0.55 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionPolygon2D" parent="barril" index="1"]

build_mode = 0
polygon = PoolVector2Array( -55.6853, 53.4387, -55.6853, -49.7208, -46.4929, -49.7208, -46.4929, -62.9988, 47.4742, -62.9988, 48.4956, -53.8064, 58.7095, -51.7637, 58.7095, 50.3745, 45.4315, 50.3745, 46.4529, 62.6311, -46.4929, 63.6526, -46.4929, 53.4387 )
__meta__ = {
"_edit_lock_": true
}

[node name="enemy_arrow" type="KinematicBody2D" parent="." index="7"]

position = Vector2( 680.403, 977.362 )
input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="animations" type="AnimatedSprite" parent="enemy_arrow" index="0"]

scale = Vector2( 0.12, 0.12 )
frames = SubResource( 6 )
animation = "idle"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionShape2D" parent="enemy_arrow" index="1"]

shape = SubResource( 7 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="arrows" type="Node" parent="enemy_arrow" index="2"]

[node name="shooter_timer" type="Timer" parent="enemy_arrow" index="3"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="arrow_point" type="Position2D" parent="enemy_arrow" index="4"]

position = Vector2( 79.278, 38.0795 )

[node name="arrow_sound" type="AudioStreamPlayer" parent="enemy_arrow" index="5"]

stream = ExtResource( 13 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="door_three" type="Position2D" parent="." index="8"]

position = Vector2( 158.929, 1139.83 )
scale = Vector2( 1.55435, 1.14123 )

[node name="sheet_0" type="StaticBody2D" parent="." index="9"]

editor/display_folded = true
position = Vector2( 1963.12, 878.013 )
scale = Vector2( 0.333448, 0.333448 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 14 )

[node name="sprite" type="Sprite" parent="sheet_0" index="0"]

texture = ExtResource( 15 )
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionPolygon2D" parent="sheet_0" index="1"]

build_mode = 0
polygon = PoolVector2Array( -54.5889, 41.9768, -54.5889, -69.4426, -45.7144, -69.4426, -45.2217, -80.2886, 54.8589, -80.7817, 55.8447, -70.9214, 64.2256, -71.4143, 65.7046, -62.0474, 74.5791, -61.0613, 75.0718, -40.355, 66.1978, -39.8621, 65.7046, -30.002, 54.3657, -29.509, 54.3657, 71.0642, 45.4912, 71.0642, 44.9985, 80.9243, -65.4346, 80.4314, -65.4346, 71.0642, -75.7881, 70.5713, -75.2949, 49.3718, -64.4487, 49.865, -64.9419, 40.9907 )
__meta__ = {
"_edit_lock_": true
}

[node name="stairs" type="Node" parent="." index="10"]

editor/display_folded = true

[node name="stair_0" type="StaticBody2D" parent="stairs" index="0"]

editor/display_folded = true
position = Vector2( 1800, 930 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Collision", "Transform" ]

[node name="sprite" type="AnimatedSprite" parent="stairs/stair_0" index="0"]

scale = Vector2( 0.535166, 0.535166 )
frames = SubResource( 8 )
animation = "off"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionPolygon2D" parent="stairs/stair_0" index="1"]

visible = false
build_mode = 0
polygon = PoolVector2Array( -32.9622, 12.0261, 33.8388, 12.0261, 33.8388, 0.137802, 45.161, 0.137802, 45.0888, -11.1878, -44.472, -11.0483, -44.193, 0.530405, -32.8933, 0.530405 )
__meta__ = {
"_edit_lock_": true
}

[node name="stair_1" type="StaticBody2D" parent="stairs" index="1"]

editor/display_folded = true
position = Vector2( 1680, 1000 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]

[node name="sprite" type="AnimatedSprite" parent="stairs/stair_1" index="0"]

scale = Vector2( 0.535166, 0.535166 )
frames = SubResource( 8 )
animation = "off"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionPolygon2D" parent="stairs/stair_1" index="1"]

visible = false
build_mode = 0
polygon = PoolVector2Array( -32.9622, 12.0261, 33.8388, 12.0261, 33.8388, 0.137802, 45.161, 0.137802, 45.0888, -11.1878, -44.472, -11.0483, -44.193, 0.530405, -32.8933, 0.530405 )
__meta__ = {
"_edit_lock_": true
}

[node name="stair_2" type="StaticBody2D" parent="stairs" index="2"]

editor/display_folded = true
position = Vector2( 1560, 1070 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]

[node name="sprite" type="AnimatedSprite" parent="stairs/stair_2" index="0"]

scale = Vector2( 0.535166, 0.535166 )
frames = SubResource( 8 )
animation = "off"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionPolygon2D" parent="stairs/stair_2" index="1"]

visible = false
build_mode = 0
polygon = PoolVector2Array( -32.9622, 12.0261, 33.8388, 12.0261, 33.8388, 0.137802, 45.161, 0.137802, 45.0888, -11.1878, -44.472, -11.0483, -44.193, 0.530405, -32.8933, 0.530405 )
__meta__ = {
"_edit_lock_": true
}

[node name="stair_3" type="StaticBody2D" parent="stairs" index="3"]

editor/display_folded = true
position = Vector2( 1440, 1140 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
_sections_unfolded = [ "Transform" ]

[node name="sprite" type="AnimatedSprite" parent="stairs/stair_3" index="0"]

scale = Vector2( 0.535166, 0.535166 )
frames = SubResource( 8 )
animation = "off"
_sections_unfolded = [ "Transform" ]
__meta__ = {
"_edit_lock_": true
}

[node name="collision" type="CollisionPolygon2D" parent="stairs/stair_3" index="1"]

visible = false
build_mode = 0
polygon = PoolVector2Array( -32.9622, 12.0261, 33.8388, 12.0261, 33.8388, 0.137802, 45.161, 0.137802, 45.0888, -11.1878, -44.472, -11.0483, -44.193, 0.530405, -32.8933, 0.530405 )
__meta__ = {
"_edit_lock_": true
}

[node name="first_step" type="Position2D" parent="." index="11"]

position = Vector2( 1765.8, 890.091 )

[node name="rhythm_timer" type="Timer" parent="." index="12"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="start_shooting" type="Position2D" parent="." index="13"]

position = Vector2( 1289.76, 1114.21 )

[node name="notes" type="Node" parent="." index="14"]

[node name="note_0" type="AudioStreamPlayer" parent="notes" index="0"]

stream = ExtResource( 18 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="note_1" type="AudioStreamPlayer" parent="notes" index="1"]

stream = ExtResource( 19 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="note_2" type="AudioStreamPlayer" parent="notes" index="2"]

stream = ExtResource( 20 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="note_3" type="AudioStreamPlayer" parent="notes" index="3"]

stream = ExtResource( 21 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="timeout" from="enemy_arrow/shooter_timer" to="enemy_arrow" method="_on_shooter_timer_timeout"]

[connection signal="timeout" from="rhythm_timer" to="sheet_0" method="_on_rhythm_timer_timeout"]


